--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,10 @@ jobs:
         with:
           java-version: 13
 
+      - name: Install libcurl
+        run: sudo apt-get install -y --no-install-recommends libcurl4-openssl-dev
+
+
       - name: Cache gradle wrapper
         uses: actions/cache@v2
         with:
